--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -40,9 +40,8 @@
                     Sign Up
                   </a>
                   <ul class="dropdown-menu">
-                    <li>
-                        <a class="dropdown-item" href="{% url 'trainee sign up' %}" style="color:black">Trainee</a></li>
-                    <li><a class="dropdown-item" href="{% url 'trainer sign up' %}" style="color:black">Coach</a></li>
+                    <li><a class="sign-up-dropdown-link" href="{% url 'trainee sign up' %}" style="color:black; padding-left:15px;">Trainee</a></li>
+                    <li><a class="sign-up-dropdown-link" href="{% url 'trainer sign up' %}" style="color:black; padding-left:15px;">Coach</a></li>
                   </ul>
                 </li>
 
