--- a/staticfiles/styles/structure/nav.css
+++ b/staticfiles/styles/structure/nav.css
@@ -15,7 +15,8 @@ ul.nav-list{
     display:flex;
     justify-content: right;
     align-items: center;
-
+    box-shadow: 0 15px 30px 0 rgba(0,0,0,0.21),
+    0 5px 15px 0 rgba(0,0,0,0.08);
 }
 
 .nav-bar{
