--- a/templates/partials/trainer-dashboard/my-articles.html
+++ b/templates/partials/trainer-dashboard/my-articles.html
@@ -1,7 +1,13 @@
 <div class="my-articles">
     {% if trainer_articles %}
         {% for article in trainer_articles %}
-            {{ article.heading }}
+            <div class="my-articles-listing">
+                <p>
+                    <h3>{{ article.heading }}</h3>
+                    <a href="{% url 'article edit' slug=article.slug %}" style="color:green">Edit</a>
+                    <a href="{% url 'article delete' slug=article.slug %}" style="color:red">Delete</a>
+                </p>
+            </div>
         {% endfor %}
     {% else %}
         {% if is_partner %}
