Nav menu dropdowns added
Users can choose the category of articles or exercises from the dropdown menus in the navbar.

--- a/staticfiles/styles/utils/buttons.css
+++ b/staticfiles/styles/utils/buttons.css
@@ -47,6 +47,13 @@
     border: 0.2px solid lightgrey;
 }
 
-.sign-up-dropdown-link:hover{
-    background-color: lightgrey;
+
+.nav-dropdown-link{
+    background-color: steelblue;
+    padding-left:15px;
 }
+
+
+
+
+
