--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        {% include 'partials/nav.html' %}
+        {% include 'partials/nav/nav.html' %}
     </header>
 
     <main>
