--- a/templates/partials/trainer-dashboard/prof-info.html
+++ b/templates/partials/trainer-dashboard/prof-info.html
@@ -1,5 +1,6 @@
+<h1>Statistics</h1>
 <div class="profile-stats">
-    Statistics
+
 
     <h3>Times hired: {{ times_hired }}</h3>
     <h3>Current trainees coaching: {{ num_active_clients }}</h3>
