index.html in the root

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,36 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Vazirmatn:wght@200;400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        {% include 'partials/nav.html' %}
+        {% include 'partials/nav/nav.html' %}
     </header>
 
     <main>
+{#     TODO:   Create a block with a coach and trainee on the left and a sign up button on the right#}
+{#    Alternative: Same image, but buttons for different sections on the left in an arc#}
         {% block page_content %}
         {% endblock %}
     </main>
 
-    <footer>
-{#        TODO: think for a footer menu  #}
-    </footer>
+{#    <footer>#}
+{#        TODO: think about a footer menu  #}
+{#    </footer>#}
+<script src="{% static 'scripts/app.js' %}"></script>
+<script src="{% static 'scripts/buttons.js' %}"></script>
+<script src="{% static 'scripts/indexImageBlur.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/fbab65fcce.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
+
